0.04

0.03 2014-11-04T13:02:05+01:00
 - Fix Image::Random api to new 0.06 version.

0.02 2014-11-04T07:30:09+01:00
 - Add tests.

0.01 2014-11-01T13:46:29+01:00
 - First version.