@@ -16,6 +16,9 @@ requires 'File::Basename' => 0;
 requires 'File::Spec::Functions' => 0;
 requires 'Image::Random' => 0.06;
 requires 'Video::Delay::Const' => 0;
+if ($^O eq 'MSWin32') {
+	requires 'Win32::Symlink' => 0;
+}
 requires 'perl' => '5.6.0';
 resources 'bugtracker' => 'https://rt.cpan.org/Public/Dist/Display.html'.
 	'?Name=Video-Pattern';
