@@ -1,4 +1,5 @@
 0.04
+ - Add support for symlinks on Window. Or simple copy on Windows.
 
 0.03 2014-11-04T13:02:05+01:00
  - Fix Image::Random api to new 0.06 version.
